Fixed mobile canvas size bug

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div id="about" class="noBack container-fluid p-4 darkMode">
             <div class="container p-3 primBack">
                         <h2 class="mediumTitle pb-3">About Me</h2>
-                        <p class="pb-3">Hi I'm Kevin, I'm an avid developer who like to build robust apps with stellar code. 
+                        <p class="pb-3">Hi I'm Kevin, I'm an avid developer who likes to build robust apps with stellar code. 
                             React is the main framework that I use for software development. 
                             Java and JavaScript are my go-to languages, but I also dabble in other languages like Python. 
                             I'm always excited to learn new technologies or work on new projects. </p>
